# MidiPerfoSeq

./: .gitignore  CMakeLists.txt  perfoseq.kdev4
.kdev4/: perfoseq.kdev4
plugins/MidiPerfoSeq/: .MidiPerfoSeq.cpp.kate-swp  DistrhoPluginInfo.h  MidiPerfoSeq.cpp  MidiPerfoSeq.h
plugins/midithrough/: DistrhoPluginInfo.h  MidiThroughExamplePLugin.h  MidiThroughExamplePlugin.cpp
scripts/: install_MidiPerfoSeq.sh
